--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
-patreon: ranluo
-open_collective: marktext
-custom: https://paypal.me/ranluo?locale.x=zh_XC
+# patreon: jgwill
+# open_collective: marktext
+# custom: https://paypal.me/ranluo?locale.x=zh_XC
